Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,11 +85,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05714285714285714"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code for testing the null hypothesis here"
+    "#Your code for testing the null hypothesis here\n",
+    "p = 2/"
    ]
   },
   {
