--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,8 @@
    ],
    "source": [
     "#Your code for testing the null hypothesis here\n",
-    "p = 2/"
+    "p = 2/35\n",
+    "var = "
    ]
   },
   {
