--- a/index.ipynb
+++ b/index.ipynb
@@ -85,22 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.05714285714285714"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-821e53ebd570>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-821e53ebd570>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    var =\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "#Your code for testing the null hypothesis here\n",
+    "n = 35\n",
     "p = 2/35\n",
     "var = "
    ]
