Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,7 @@
     "#Your code for testing the null hypothesis here\n",
     "n = 35\n",
     "p = 2/35\n",
-    "var = "
+    "var = 25*p"
    ]
   },
   {
