Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,15 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8857142857142857"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code for testing the null hypothesis here\n",
     "n = 35\n",
     "p = 2/35\n",
-    "var = n*p*(1-p)\n",
-    "var"
+    "var = n*p*(1-p)"
    ]
   },
   {
