--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,10 @@
     "#Your code for testing the null hypothesis here\n",
     "n = 35\n",
     "p = 2/35\n",
-    "var = n*p*(1-p)"
+    "var = n*p*(1-p)\n",
+    "st.norm.ppf(alpha)\n",
+    "st.norm.ppf(beta\n",
+    "           )"
    ]
   },
   {
