Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,8 +105,7 @@
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
     "st.norm.ppf(alpha)\n",
-    "st.norm.ppf(beta\n",
-    "           )"
+    "st.norm.ppf(beta)\n"
    ]
   },
   {
