Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,7 @@
     "n = 35\n",
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
-    "st.norm.ppf(alpha)\n",
+    "a_alpha = st.norm.ppf(alpha)\n",
     "st.norm.ppf(beta)\n"
    ]
   },
