Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,8 +104,8 @@
     "n = 35\n",
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
-    "a_alpha = st.norm.ppf(alpha)\n",
-    "st.norm.ppf(beta)\n"
+    "z_alpha = st.norm.ppf(alpha)\n",
+    "z_beta = st.norm.ppf(beta)\n"
    ]
   },
   {
