Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,8 @@
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
     "z_alpha = st.norm.ppf(alpha)\n",
-    "z_beta = st.norm.ppf(beta)\n"
+    "z_beta = st.norm.ppf(beta)\n",
+    "num = z_alpha+"
    ]
   },
   {
