Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,8 @@
     "var = n*p*(1-p)\n",
     "z_alpha = st.norm.ppf(alpha)\n",
     "z_beta = st.norm.ppf(beta)\n",
-    "num = (z_alpha+z_beta)**2"
+    "num = (z_alpha+z_beta)**2*var\n",
+    "den = "
    ]
   },
   {
