Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
     "z_alpha = st.norm.ppf(alpha)\n",
     "z_beta = st.norm.ppf(beta)\n",
     "num = (z_alpha+z_beta)**2*var\n",
-    "den = mu_1 - mu"
+    "den = (mu_1 - mu_0)"
    ]
   },
   {
