--- a/index.ipynb
+++ b/index.ipynb
@@ -70,6 +70,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,8 +112,8 @@
     "n = 35\n",
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
-    "z_alpha = st.norm.ppf(alpha)\n",
-    "z_beta = st.norm.ppf(beta)\n",
+    "z_alpha = stat.norm.ppf(alpha)\n",
+    "z_beta = stat.norm.ppf(beta)\n",
     "num = (z_alpha+z_beta)**2*var\n",
     "den = (mu_1 - mu_0)**2\n",
     "num/den"
