Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy.stats as st"
+   ]
   },
   {
    "cell_type": "markdown",
