--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "n = 35\n",
+    "p = 2/35\n",
+    "var = n*p*(1-p)\n",
+    "mu_1 = 0.06\n",
+    "mu_0 = 0.05\n",
+    "z_alpha = st.norm.ppf(alpha)\n",
+    "z_beta = st.norm.ppf(beta)\n",
+    "num = (z_alpha+z_beta)**2*var\n",
+    "den = (mu_1 - mu_0)**2\n",
+    "num/den"
    ]
   },
   {
