Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,6 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alpha = \n",
     "n = 35\n",
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
