Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,11 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "204075.27768034008"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "alpha = \n",
+    "alpha = 0.05\n",
+    "beta = 0.05\n",
     "n = 35\n",
     "p = 2/35\n",
     "var = n*p*(1-p)\n",
